[gd_scene load_steps=3 format=3 uid="uid://bqrh12ljjgrvg"]

[ext_resource type="Script" uid="uid://hs3y4iqrsr5" path="res://scenes/menu/continue/continue_menu.gd" id="1_gac1e"]
[ext_resource type="PackedScene" uid="uid://c8rt3ni2j4tlg" path="res://scenes/menu/continue/SaveFileCard/save_file_card.tscn" id="2_vlt8f"]

[node name="ContinueMenu" type="Node2D"]
script = ExtResource("1_gac1e")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 19.0
offset_top = 43.0
offset_right = 70.0
offset_bottom = 179.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Slot1" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot 1"

[node name="Slot2" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot 2"

[node name="Slot3" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot 3"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[node name="SaveFileCard" parent="." instance=ExtResource("2_vlt8f")]
unique_name_in_owner = true
position = Vector2(106, 85)

[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
